修改之前发现的问题和志愿相关接口对接。

--- a/miniapp/src/pages/assessment/popular-majors/index.less
+++ b/miniapp/src/pages/assessment/popular-majors/index.less
@@ -382,6 +382,29 @@
   color: #999;
 }
 
+// 加载更多按钮
+.popular-majors-page__load-more {
+  padding: 32rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popular-majors-page__load-more-button {
+  min-width: 200rpx;
+}
+
+// 没有更多数据提示
+.popular-majors-page__no-more {
+  padding: 32rpx;
+  text-align: center;
+}
+
+.popular-majors-page__no-more-text {
+  font-size: 28rpx;
+  color: #999;
+}
+
 // 对话框样式
 .popular-majors-page__dialog {
   max-height: 80vh;
