--- a/miniapp/src/pages/majors/index.less
+++ b/miniapp/src/pages/majors/index.less
@@ -184,10 +184,18 @@
   &--clickable {
     color: #1A4099;
     cursor: pointer;
-    transition: opacity 0.2s;
+    transition: all 0.2s;
+    display: inline-block;
+    padding-bottom: 4rpx;
+    border-bottom: 2rpx solid rgba(26, 64, 153, 0.4);
+    
+    Text {
+      color: #1A4099;
+    }
     
     &:active {
       opacity: 0.7;
+      border-bottom-color: rgba(26, 64, 153, 0.6);
     }
   }
 }
