--- a/miniapp/src/pages/majors/index.less
+++ b/miniapp/src/pages/majors/index.less
@@ -50,7 +50,36 @@
 .majors-page__subtitle {
   font-size: 24rpx;
   color: rgba(255, 255, 255, 0.9);
-  margin-bottom: 32rpx;
+  margin-bottom: 24rpx;
+}
+
+// 搜索框样式
+.majors-page__search {
+  display: flex;
+  align-items: center;
+  margin-bottom: 24rpx;
+  padding: 0 24rpx;
+  height: 72rpx;
+  background: #fff;
+  border-radius: 36rpx;
+  border: 2rpx solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 2rpx 8rpx rgba(0, 0, 0, 0.1);
+}
+
+.majors-page__search-icon {
+  font-size: 32rpx;
+  margin-right: 16rpx;
+  color: #999;
+}
+
+.majors-page__search-input {
+  flex: 1;
+  height: 100%;
+  font-size: 28rpx;
+  border: none;
+  background: transparent;
+  padding: 0;
+  color: #333;
 }
 
 .majors-page__tabs {
