重新排版院校探索中加入志愿页面

--- a/miniapp/src/pages/assessment/favorite-majors/index.less
+++ b/miniapp/src/pages/assessment/favorite-majors/index.less
@@ -18,6 +18,8 @@
   font-size: 32rpx;
   color: #666;
 }
+
+.favorite-majors-page__bottom-decoration {
   position: absolute;
   bottom: 0;
   left: 0;
